--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "laravelcollective/html": "^6.2",
+        "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^7.0",
         "unisharp/laravel-filemanager": "^2.2"
     },
     "require-dev": {
